Started big refactoring of InventoryController by using org.salespointframework.catalog.Product; Separation of concerns.